# signals

./: CMakeLists.txt  README.md
src/: main.c  signals.c  signals.h
src/handlers/: handlers.h  hard_supported_handler.c  hard_supported_handler.h  ideal_handler.c  ideal_handler.h  soft_supported_handler.c  soft_supported_handler.h  unsupported_handler.c  unsupported_handler.h
